2006-04-17  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/aio.c (aioSleep): Sleep in aioPoll (i.e, select) or
	nanosleep, for timeouts < 1 timeslice.

	* vm/sqUnixMain.c (ioRelinquishProcessorForMicroseconds):
	Nanosecond sleep moved to aioSleep().

	* vm-display-X11/sqUnixX11.c (display_ioRelinquishProcessorForMicroseconds): 
	* vm-display-Quartz/sqUnixQuartz.m (display_ioRelinquishProcessorForMicroseconds):
	* vm-display-null/sqUnixDisplayNull.c (display_ioRelinquishProcessorForMicroseconds): 
	* vm-display-fbdev/sqUnixFBDev.c (display_ioRelinquishProcessorForMicroseconds): 
	* vm-display-custom/sqUnixCustomWindow.c (display_ioRelinquishProcessorForMicroseconds): 
	Call aioSleep() instead of aioPoll().

2006-04-14  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/aio.c (aioInit): SIGIO handled by forceInterruptCheck().

	* vm/aio.c (aioEnable): Set ASYNC on internal descriptors.

	* vm/sqUnixMain.c (ioRelinquishProcessorForMicroseconds): Don't
	nanosleep if events can be processed.

	* vm/aio.c (FPRINTF): Absolute and relative timestamps on debug
	messages.

	* plugins/SocketPlugin/sqUnixSocket.c (FPRINTF): Absolute and
	relative timestamps on debug messages.

	* plugins/SocketPlugin/sqUnixSocket.c (socketOptions): Enable
	SO_REUSEPORT.

2006-04-10  Ian Piumarta  <ian.piumarta@squeakland.org>

	* src: Regeneratated.

2006-04-06  Ian Piumarta  <ian.piumarta@squeakland.org>

	* config/acinclude.m4: Define VM_BUILD_STRING.

	* config/config.h.in: Declare VM_BUILD_STRING.

	* vm/sqUnixMain.c (getAttribute): Answer VM_BUILD_STRING for
	attribute 1006.

	* sqMemoryAccess.h: Clean up recent edits.  Rename
	INLINING_WORKS_FOR_SMALL_ACCESSORS -> USE_INLINE_MEMORY_ACCESSORS.

	* plugins/UUIDPlugin/acinclude.m4: Require <uuid/uuid.h>.  Link
	against libuuid, if present.

	* plugins/UUIDPlugin/sqUnixUUID.c: Implemented.

2006-04-05  Ian Piumarta  <ian.piumarta@squeakland.org>

	* UnixOSProcessPlugin.c (SQAIO_H): Rename aio.h -> sqaio.h.
